--- a/birdhousebuilder/recipe/mongodb/mongodb.conf
+++ b/birdhousebuilder/recipe/mongodb/mongodb.conf
@@ -3,13 +3,13 @@
 # Where to store the data.
 dbpath=${prefix}/var/lib/mongodb
 
-#where to log
-logpath=${prefix}/var/log/mongodb/mongodb.log
+#where to log: default /dev/stdout
+#logpath=/dev/stdout
 
 logappend=true
 
-bind_ip = 127.0.0.1
-#port = 27017
+bind_ip = ${bind_ip}
+port = ${port}
 
 # Enable journaling, http://www.mongodb.org/display/DOCS/Journaling
 journal=true
@@ -22,7 +22,7 @@ journal=true
 #auth = true
 
 # Verbose logging output.
-#verbose = true
+verbose = false
 
 # Inspect all client data for validity on receipt (useful for
 # developing drivers)
@@ -46,7 +46,7 @@ journal=true
 #nohints = true
 
 # Disable the HTTP interface (Defaults to localhost:27018).
-#nohttpinterface = true
+nohttpinterface = true
 
 # Turns off server-side scripting.  This will result in greatly limited
 # functionality
