--- a/birdhousebuilder/recipe/mongodb/mongodb.conf
+++ b/birdhousebuilder/recipe/mongodb/mongodb.conf
@@ -1,7 +1,7 @@
 # mongodb.conf
 
 # Where to store the data.
-dbpath=${prefix}/var/lib/mongodb
+dbpath=${var_prefix}/lib/mongodb
 
 #where to log: default /dev/stdout
 #logpath=/dev/stdout
