using zc.recipe.deployment

--- a/birdhousebuilder/recipe/mongodb/mongodb.conf
+++ b/birdhousebuilder/recipe/mongodb/mongodb.conf
@@ -1,7 +1,7 @@
 # mongodb.conf
 
 # Where to store the data.
-dbpath=${var_prefix}/lib/mongodb
+dbpath=${lib_directory}
 
 #where to log: default /dev/stdout
 #logpath=/dev/stdout
